# gosh.memory

./: LICENSE  README.md  pyproject.toml
docs/: docs-claude-code.md  docs-gemini-cli.md  docs-index.md  docs-openai-codex.md  docs-openclaw.md
src/: __init__.py  artifacts.py  audit.py  block_extractor.py  block_merger.py  block_segmenter.py  cli.py  common.py  config.py  courier.py  coverage_recovery.py  episode_extraction.py  episode_features.py  episode_packet.py  episode_retrieval.py  episodes.py  extraction_substrate.py  fact_alignment.py  git_importer.py  identity.py  importers.py  inference.py  ingest.py  librarian.py  mcp_server.py  membership.py  memory.py  prompt_registry.py  providers.py  retrieval.py  setup_store.py  source_adapters.py  source_detect.py  source_loader.py  storage.py  temporal.py  temporal_normalizer.py  temporal_planner.py  temporal_values.py  tls.py  (+4 more)
src/mal/: README.md  apply.py  artifact_store.py  atom.py  control_store.py  eval_runner.py  failure_analyzer.py  feedback_store.py  optimizer.py  qa_generator.py  scheduler.py  snapshot.py
src/prompts/extraction/: agent_trace.md  classify.md  conversation.md  document.md  fact_list.md  fallback_block.md  legacy.md  list_block.md  narrative.md  prose_block.md  table_block.md  unified_source_aggregation.md  unified_source_aggregation_repair.md
src/prompts/inference/: aggregate.md  compositional.md  current.md  hybrid.md  icl.md  list_set.md  lookup.md  procedural.md  prospective.md  slot_query.md  summarize.md  summarize_with_metadata.md  synthesize.md  temporal.md  tool.md
tests/: test_acl_consolidation.py  test_acl_enforcement.py  test_acl_identity.py  test_admin_access.py  test_artifacts.py  test_ask.py  test_auth.py  test_block_extractor.py  test_block_integration.py  test_block_segmenter.py  test_bug1_race_condition.py  test_bug2_courier_tiers.py  test_bug3_last_seen_at.py  test_cli.py  test_common_wiring.py  test_complexity_hint.py  test_complexity_hint_v2.py  test_config.py  test_context_payload.py  test_courier.py  test_courier_acl.py  test_coverage_recovery.py  test_document_block_integration.py  test_document_ingest_metadata.py  test_document_segmenter.py  test_embedding_cache.py  test_embedding_wiring.py  test_episode_extraction_runtime.py  test_episode_retrieval_fixes.py  test_episode_runtime.py  test_eval_memory.py  test_extraction_substrate.py  test_features_integration.py  test_format_detection.py  test_git_importer.py  test_health.py  test_importers.py  test_inf_prompts.py  test_inference.py  test_inference_prompts.py  (+52 more)
