[project]
name = "gosh-memory"
version = "0.1.0"
description = "Semantic long-term memory for AI agents"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25.0",
    "mcp>=1.26.0",
    "numpy>=1.24.0",
    "openai>=1.30.0",
    "python-dateutil>=2.8.0",
    "rank-bm25>=0.2.2",
    "requests>=2.31.0",
    "simplemma>=1.1.2",
    "starlette>=0.37.0",
    "tabulate>=0.9.0",
    "tqdm>=4.66.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
local-embed = ["sentence-transformers>=2.2"]
google = ["google-generativeai>=0.8.0"]
dev = ["ruff>=0.8.0", "mypy>=1.13.0", "bandit>=1.8.0"]
all = ["sentence-transformers>=2.2", "google-generativeai>=0.8.0"]

[project.scripts]
gosh-memory = "src.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["multibench", "karnali", "benchmarks", "archive", "raw", "sceince"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line length handled by formatter
    "E741",   # ambiguous variable name (l, O, I) — widespread in codebase
    "S101",   # assert usage OK in tests
    "S603",   # subprocess calls OK for internal tooling
    "S607",   # partial path OK for internal tooling
    "UP007",  # X | Y union syntax already used
    "UP009",  # UTF-8 encoding declaration — existing convention
    "RUF012", # mutable class variable annotations
    "RUF001", # ambiguous unicode — Cyrillic caught by language-check
    "RUF005", # collection concat — readability preference
    "RUF013", # implicit Optional — too many to fix at once
    "RUF043", # pairwise — py310 compat
    "RUF059", # unused private variable — many false positives in data classes
    "SIM102", # collapsible if — readability preference
    "SIM103", # return condition directly — readability preference
    "SIM105", # contextlib.suppress — readability preference
    "SIM108", # ternary — readability preference
    "F841",   # unused variable — handled case by case
    "E701",   # multiple statements on one line — existing style
    "E402",   # module level import not at top — sys.path setup
    "S110",   # try-except-pass — intentional in many places
    "S112",   # try-except-continue — intentional
    "S310",   # urllib.request.urlopen — internal tooling
    "B007",   # unused loop variable — common pattern with enumerate/zip
    "B904",   # raise from — existing exception chaining style
    "B905",   # zip strict — py310 compat
    "B023",   # function uses loop variable — intentional closures
    "C401",   # unnecessary generator — readability preference
    "C414",   # unnecessary double call — readability preference
    "E731",   # lambda assignment — existing style
    "PIE810", # startswith/endswith tuple — readability preference
    "RUF006", # asyncio dangling task — intentional fire-and-forget
    "RUF015", # next(iter()) — readability preference
    "S104",   # bind all interfaces — intentional for server
    "SIM110", # any() — readability preference
    "T201",   # print — used in CLI and diagnostics
    "F401",   # unused imports — many are re-exports
    "F541",   # f-string without placeholders — intentional
    "F811",   # redefined unused — intentional overrides
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20", "F401", "B023", "B017", "E731", "I001"]
"src/cli.py" = ["T20"]
"src/mcp_server.py" = ["T20"]
"src/common.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["dateutil.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["src.prompt_registry", "src.block_segmenter"]
ignore_errors = true

[tool.bandit]
exclude_dirs = ["tests", "benchmarks", "archive"]
skips = ["B101", "B104", "B310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
norecursedirs = ["archive", "multibench", "benchmarks", "karnali", ".git"]
